# finite-difference-methods

./: .gitignore  BSM.cpp  BSM.h  CMakeLists.txt  CNFD.cpp  CNFD.h  EFD.cpp  EFD.h  FunctionsUtil.cpp  FunctionsUtil.h  IFD.cpp  NVDA_options_data.csv  NVDA_outputData1.csv  OptionData.cpp  OptionData.h  OptionType.h  README.md  Ticker.cpp  Ticker.h  data_analysis.ipynb  main.cpp  util.cpp  util.h
